k8s/thomas-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: thomas
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/thomas: "true"
  podSelector:
    matchLabels:
      io.kompose.network/thomas: "true"
